--- a/Alcolist/war/WEB-INF/web.xml
+++ b/Alcolist/war/WEB-INF/web.xml
@@ -1,24 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
               http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         version="2.5"
-         xmlns="http://java.sun.com/xml/ns/javaee">
+	version="2.5" xmlns="http://java.sun.com/xml/ns/javaee">
 
-  <!-- Servlets -->
-  <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>com.lamchop.alcolist.server.GreetingServiceImpl</servlet-class>
-  </servlet>
-  
-  <servlet-mapping>
-    <servlet-name>greetServlet</servlet-name>
-    <url-pattern>/alcolist/greet</url-pattern>
-  </servlet-mapping>
-  
-  <!-- Default page to serve -->
-  <welcome-file-list>
-    <welcome-file>Alcolist.html</welcome-file>
-  </welcome-file-list>
+	<!-- Servlets -->
+	<servlet>
+		<servlet-name>greetServlet</servlet-name>
+		<servlet-class>com.lamchop.alcolist.server.GreetingServiceImpl</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>greetServlet</servlet-name>
+		<url-pattern>/alcolist/greet</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>importService</servlet-name>
+		<servlet-class>com.lamchop.alcolist.server.ImportServiceImpl</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>importService</servlet-name>
+		<url-pattern>/alcolist/import</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>userDataService</servlet-name>
+		<servlet-class>com.lamchop.alcolist.server.UserDataServiceImpl</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>userDataService</servlet-name>
+		<url-pattern>/alcolist/userData</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>manufacturerService</servlet-name>
+		<servlet-class>com.lamchop.alcolist.server.ManufacturerServiceImpl</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>manufacturerService</servlet-name>
+		<url-pattern>/alcolist/manufacturer</url-pattern>
+	</servlet-mapping>
+
+
+	<!-- Default page to serve -->
+	<welcome-file-list>
+		<welcome-file>Alcolist.html</welcome-file>
+	</welcome-file-list>
 
 </web-app>
