--- a/Alcolist/.classpath
+++ b/Alcolist/.classpath
@@ -8,7 +8,10 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-maps-api-3.10.0-alpha-7.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-ajaxloader.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/json-simple-1.1.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/junit.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/org.hamcrest.core_1.3.0.v201303031735.jar"/>
+	<classpathentry kind="lib" path="testing-jars/appengine-api-stubs.jar"/>
+	<classpathentry kind="lib" path="testing-jars/appengine-api.jar"/>
+	<classpathentry kind="lib" path="testing-jars/appengine-testing.jar"/>
+	<classpathentry kind="lib" path="testing-jars/junit.jar"/>
+	<classpathentry kind="lib" path="testing-jars/org.hamcrest.core_1.3.0.v201303031735.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
